--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,17 @@ pickleshare==0.7.4
 Pillow==9.3.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
-pyclust==0.2.0
-pyclustering==0.8.1
+pyclust
+pyclustering
 Pygments==2.15.0
 scikit-learn==0.20.1
-scipy==1.10.0
+scipy
 simplegeneric==0.8.1
 six==1.11.0
-torch==1.13.1
-torchvision==0.3
-tqdm==4.23.3
+torch
+torchvision
+tqdm
 traitlets==4.3.2
 wcwidth==0.1.7
+treelib
+joblib
