--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,24 @@ backcall==0.1.0
 decorator==4.3.0
 ipython==8.10.0
 ipython-genutils==0.2.0
-jedi==0.12.0
 numpy==1.22.0
 parso==0.2.1
 pexpect==4.5.0
 pickleshare==0.7.4
 Pillow==9.3.0
-prompt-toolkit==1.0.15
+prompt-toolkit
 ptyprocess==0.5.2
 pyclust
 pyclustering
 Pygments==2.15.0
 scikit-learn==0.20.1
-scipy
+scipy==1.11
 simplegeneric==0.8.1
 six==1.11.0
 torch
 torchvision
 tqdm
-traitlets==4.3.2
+traitlets
 wcwidth==0.1.7
 treelib
 joblib
